# carb

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: audit-on-push.yml  ci.yml  release.yml  scheduled-audit.yml
fixtures/bad-config/.carb/: config.yml
fixtures/no-config/: .gitignore  package.json
fixtures/workspace/: .yarnrc.yml
fixtures/workspace/.carb/: config.yml
src/: cli.rs  config.rs  dependency_graph.rs  error.rs  main.rs  package_json.rs  project.rs  workspaces.rs
tests/: cli_test.rs
