[package]
name = "carb"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
env_logger = "0.9"
clap-verbosity-flag = "0.3.1"
log = "0.4"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
structopt = "0.3"
thiserror = "1.0"
globwalk = "0.8.1"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.7"
